<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.screens.register.fragment.ResetPasswordFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_rawRes="@raw/plant_animation_reset_password"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/reset_password_view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
    </View>

    <EditText
        android:id="@+id/emailInputResetPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/custom_registration_text_background"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="15dp"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/resetInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputResetPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        android:textAlignment="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="17sp"
        android:background="@drawable/custom_registration_button_background"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/resetInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>