<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.screens.register.fragment.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRegister"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="60dp"
            app:cardBackgroundColor="@color/appGreen"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/registerTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/lobster_regular"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/usernameInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_registration_text_background"
                    android:drawableStart="@drawable/user_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerTitleText" />

                <EditText
                    android:id="@+id/emailInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_registration_text_background"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usernameInputRegister" />

                <EditText
                    android:id="@+id/phoneInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_registration_text_background"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/phone"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailInputRegister" />

                <EditText
                    android:id="@+id/passwordInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_registration_text_background"
                    android:drawableStart="@drawable/lock_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phoneInputRegister" />

                <ImageView
                    android:id="@+id/passwordVisible"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:src="@drawable/visible"
                    android:visibility="gone"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/passwordInputRegister"
                    app:layout_constraintEnd_toEndOf="@id/passwordInputRegister"
                    app:layout_constraintBottom_toBottomOf="@id/passwordInputRegister"
                    />

                <ImageView
                    android:id="@+id/passwordVisibleOff"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:src="@drawable/not_visible"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="@id/passwordInputRegister"
                    app:layout_constraintEnd_toEndOf="@id/passwordInputRegister"
                    app:layout_constraintBottom_toBottomOf="@id/passwordInputRegister"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_registration_button_background"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewRegister" />

        <LinearLayout
            android:id="@+id/layoutL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerButton">

            <View
                android:layout_width="75dp"
                android:layout_height="1dp"
                android:layout_marginEnd="15dp"
                android:background="@color/appDarkGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_media"
                android:textColor="@color/appGreen"
                android:textStyle="bold" />

            <View
                android:layout_width="75dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:background="@color/appDarkGray" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleRegister"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_registration_button_background_2"
            app:layout_constraintEnd_toStartOf="@+id/facebookRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutL" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebookRegister"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_registration_button_background_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/googleRegister"
            app:layout_constraintTop_toBottomOf="@+id/layoutL" />

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:elevation="5dp"
            android:src="@drawable/googleicon"
            app:layout_constraintBottom_toBottomOf="@+id/googleRegister"
            app:layout_constraintStart_toStartOf="@+id/googleRegister"
            app:layout_constraintTop_toTopOf="@+id/googleRegister"
            app:layout_constraintVertical_bias="0.571" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="@id/googleRegister"
            app:layout_constraintTop_toTopOf="@+id/googleRegister"
            app:layout_constraintBottom_toBottomOf="@+id/googleRegister"
            app:layout_constraintEnd_toEndOf="@+id/googleRegister"
            android:elevation="5dp"
            />

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:elevation="5dp"
            android:src="@drawable/facebookicon"
            app:layout_constraintBottom_toBottomOf="@+id/facebookRegister"
            app:layout_constraintStart_toStartOf="@+id/facebookRegister"
            app:layout_constraintTop_toTopOf="@+id/facebookRegister"
            app:layout_constraintVertical_bias="0.571" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="@id/facebookRegister"
            app:layout_constraintTop_toTopOf="@+id/facebookRegister"
            app:layout_constraintBottom_toBottomOf="@+id/facebookRegister"
            app:layout_constraintEnd_toEndOf="@+id/facebookRegister"
            android:elevation="5dp"
            />

        <TextView
            android:id="@+id/inp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/do_you_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleRegister" />

        <TextView
            android:id="@+id/sing_inBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:text="@string/sign_in"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@id/inp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/googleRegister"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>